Fixed grid spacing and substituted all content

--- a/frontend/src/components/StaticGallery/StaticGallery.scss
+++ b/frontend/src/components/StaticGallery/StaticGallery.scss
@@ -6,7 +6,7 @@
         display: flex;
         flex-direction: column;
         color: #555f77;
-        font-size: 2.2rem;
+        font-size: 1.8rem;
 
         & > *:not(:last-child) {
             margin-bottom: 1.4rem;
